2008-07-05  Matthias Clasen  <mclasen@redhat.com>

	Bug 521589 – [RFC] gobject documentation should mention Vala

	* gobject/tut_tools.xml: Add a reference to Vala.
	Patch by Marc-Andre Lureau.

2008-07-05  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt: Move g_strcmp0 to a more appropriate
	place in the docs.

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.3 ===

2008-07-02  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: Add g_desktop_app_info_new_from_keyfile
	and g_file_monitor

2008-07-01  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio.types: Add missing types. Pointed out by David Zeuthen.

2008-06-24  Michael Natterer  <mitch@imendio.com>

	* glib/Makefile.am
	* gobject/Makefile.am: don't comment out the include of
	Makefile.decl just because there are no tests. It needs to be
	included in each Makefile.am or make check will fail.

2008-06-22  Stefan Kost  <ensonic@users.sf.net>

	* glib/Makefile.am:
	* gobject/Makefile.am:
	  Unify the Makefiles. In glib only scan glib folders.

2008-06-16  Ross Burton  <ross@burtonini.com>

	* gio/gio-sections.txt:
	Add g_file_enumerator_get_container.

2008-06-14  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/macros_misc.sgml: Document G_GNUC_MAY_ALIAS

	* glib/tmpl/testing.sgml: Move docs around, and add more

	* glib/tmpl/unicode.sgml: Document break types

	* glib/tmpl/hash_tables.sgml: Add docs for GHashTableIter

2008-06-12  Matthias Clasen  <mclasen@redhat.com>
	
	* === Released 2.17.2 ===

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.1 ===

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: Add some new symbols

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	* glib/running.sgml: Remove mention of G_WIN32_PRETEND_WIN9X

2008-06-12  Ross Burton  <ross@burtonini.com>

	* gio/gio-sections.txt:
	Add g_file_make_directory_with_parents.

2008-06-12  Matthias Clasen  <mclasen@redhat.com>
