@@ -1,3 +1,8 @@
+2008-07-08  Matthias Clasen  <mclasen@redhat.com>
+
+	* gio.symbols:
+	* gmount.[hc]: Add g_mount_guess_content_type(). 
+
 2008-07-06  David Zeuthen  <davidz@redhat.com>
 
 	* gio.symbols:
