@@ -1,3 +1,7 @@
+2008-07-08  Matthias Clasen  <mclasen@redhat.com>
+
+	* gio/gio-sections.txt: Add new GMount functions
+
 2008-07-05  Matthias Clasen  <mclasen@redhat.com>
 
 	Bug 521589 – [RFC] gobject documentation should mention Vala
